fix: text-alignment, margin & size #4

--- a/poetry.css
+++ b/poetry.css
@@ -38,7 +38,7 @@ p{
 	}
 
 	p{
-		font-size: 0.7rem;
+		font-size: 0.75rem;
 		line-height: 1.4;
 		padding:0 5%;
 	}
